--- a/LifeCycle/LifeCycle/MainWindow.xaml
+++ b/LifeCycle/LifeCycle/MainWindow.xaml
@@ -12,39 +12,43 @@
 
             <Grid>
                 <Grid HorizontalAlignment="Left" Height="870" VerticalAlignment="Top" Width="376.403" Margin="10,0,0,0">
-                	<Grid.Background>
-                		<LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                			<GradientStop Color="Black" Offset="0"/>
-                			<GradientStop Color="Black" Offset="1"/>
-                			<GradientStop Color="#FF8D8B8B" Offset="0.5"/>
-                		</LinearGradientBrush>
-                	</Grid.Background>
-                	<Border BorderThickness="4" BorderBrush="Chocolate" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,10,0,0" Height="250" Width="330">
-                		<Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeed"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill"/>
-                	</Border>
-                	<Border BorderThickness="4" BorderBrush="Chocolate" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="20,0,0,13.248" Height="250" Width="330">
-                		<Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectClinitianFeed"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill"/>
-                	</Border>
+                    <Grid.Background>
+                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="Black" Offset="0"/>
+                            <GradientStop Color="Black" Offset="1"/>
+                            <GradientStop Color="#FF8D8B8B" Offset="0.5"/>
+                        </LinearGradientBrush>
+                    </Grid.Background>
+                    <Border BorderThickness="4" BorderBrush="Chocolate" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,10,0,0" Height="250" Width="330">
+                        <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeed"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill"/>
+                    </Border>
+                    <Border BorderThickness="4" BorderBrush="Chocolate" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="20,0,0,13.248" Height="250" Width="330">
+                        <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectClinitianFeed"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill"/>
+                    </Border>
+                    <k:KinectTileButton Content="Options" LabelBackground="#91908A" HorizontalAlignment="Left" Margin="34,393,0,0" VerticalAlignment="Top" Width="291" x:Name="showOptionsButton" Click="showOptionsButton_Click" Height="111" Background="#FF3E3930" Foreground="#FFDE6D0F"/>
                 </Grid>
                 <Grid HorizontalAlignment="Left" Height="870" VerticalAlignment="Top" Width="833.204" Margin="375.36,0,-16.564,0">
-                	<Grid.Background>
-                		<LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                			<GradientStop Color="#FFDE6D0F"/>
-                			<GradientStop Color="#FFDE6D0F" Offset="1"/>
-                			<GradientStop Color="#FF1F1F1D" Offset="0.151"/>
-                			<GradientStop Color="#FF1F1F1D" Offset="0.746"/>
-                		</LinearGradientBrush>
-                	</Grid.Background>
-                    <k:KinectTileButton Content="Begin Workout" LabelBackground="#91908A" HorizontalAlignment="Left" Margin="22.086,719.831,0,0" VerticalAlignment="Top" Width="382.972" x:Name="beginWorkoutButton" Click="beginWorkoutButton_Click" Height="110.354" Background="#FF3E3930" Foreground="#FFDE6D0F"/>
-                	<k:KinectTileButton Content="Exit" HorizontalAlignment="Left" LabelBackground="Brown" Margin="423.668,719.831,0,0" VerticalAlignment="Top" Width="382.972" x:Name="exitProgramButton" Click="beginWorkoutButton_Click" Height="110.354" Background="#FF3E3930" Foreground="#FFDE6D0F"/>
-                	<Border  BorderThickness="2" BorderBrush="NavajoWhite" HorizontalAlignment="Left" Margin="449.184,170.518,0,0" VerticalAlignment="Top" Height="346.413" Width="327.801" Background="#FFF5EBEB"/>
-                	<Label Content="LifeCycle" HorizontalAlignment="Left" Margin="287.661,-2.861,0,0" VerticalAlignment="Top" FontSize="64" FontWeight="Bold" Foreground="#FF3E3930"/>
-                	<Border  BorderThickness="2" BorderBrush="NavajoWhite" HorizontalAlignment="Left" Margin="59.472,170.518,0,0" VerticalAlignment="Top" Height="346.413" Width="327.801" Background="#FFF5EBEB"/>
+                    <Grid.Background>
+                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="#FFDE6D0F"/>
+                            <GradientStop Color="#FFDE6D0F" Offset="1"/>
+                            <GradientStop Color="#FF1F1F1D" Offset="0.151"/>
+                            <GradientStop Color="#FF1F1F1D" Offset="0.746"/>
+                        </LinearGradientBrush>
+                    </Grid.Background>
+                    <k:KinectTileButton Content="Begin Workout" LabelBackground="#91908A" HorizontalAlignment="Left" Margin="22.086,719.831,0,0" VerticalAlignment="Top" Width="382.972" x:Name="beginWorkoutButton" Click="beginWorkoutButton_Click" Height="110.354" Background="#FF3E3930" Foreground="#FFDE6D0F" />
+                    <k:KinectTileButton Content="Exit" HorizontalAlignment="Left" LabelBackground="Brown" Margin="423.668,719.831,0,0" VerticalAlignment="Top" Width="382.972" x:Name="exitProgramButton" Click="exitProgramButton_Click" Height="110.354" Background="#FF3E3930" Foreground="#FFDE6D0F" />
+                    <Label Content="LifeCycle" HorizontalAlignment="Left" Margin="287.661,-2.861,0,0" VerticalAlignment="Top" FontSize="64" FontWeight="Bold" Foreground="#FF3E3930"/>
+                    <Label x:Name="startWorkoutCountdownLabel" Content=""  Margin="233,366,181.204,409" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="64" FontWeight="Black" Foreground="#FFDE6D0F" Width="419" d:IsHidden="True"/>
+                    <k:KinectTileButton Content="Done" LabelBackground="#91908A" HorizontalAlignment="Left" Margin="287.661,719.831,0,0" VerticalAlignment="Top" Width="290.211" x:Name="closeOptionsButton" Click="closeOptionsButton_Click" Height="110.354" Background="#FF3E3930" Foreground="#FFDE6D0F" Visibility="Hidden"/>
+                    <k:KinectScrollViewer x:Name="selectTimeScrollViewer" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Hidden" HorizontalAlignment="Left" Margin="213.159,202.963,0,0" VerticalAlignment="Top" Height="165" Width="540" Visibility="Hidden" Foreground="#FFDE6D0F">
+                        <StackPanel Orientation="Horizontal" Name="workoutTimeScrollContent" />
+                    </k:KinectScrollViewer>
+                    <Label x:Name="optionsTimeLabel" Content="Time" HorizontalAlignment="Left" Margin="94.407,226.889,0,0" VerticalAlignment="Top" Height="46.878" Width="96.542" FontSize="32" Foreground="#FFDE6D0F" Visibility="Hidden"/>
+
                 </Grid>
 
-                <!--
-            <k:KinectUserViewer VerticalAlignment="Top" HorizontalAlignment="Left" 
-               k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" Height="250" Margin="10,10,10,10" /> -->
+
 
             </Grid>
 
