--- a/LifeCycle/LifeCycle/LoginWindow.xaml
+++ b/LifeCycle/LifeCycle/LoginWindow.xaml
@@ -2,14 +2,14 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="LifeCycle" Height="300" Width="300" Background="White" ShowInTaskbar="False" Topmost="True">
-    <Grid>
+    <Grid x:Name="grid1">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="145*"/>
             <ColumnDefinition Width="147*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="loginButton" Grid.ColumnSpan="2" Content="Login" HorizontalAlignment="Left" Margin="108,225,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="loginButton_Click"/>
-        <TextBox x:Name="passwordBox" HorizontalAlignment="Left" Height="23" Margin="108,165,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2" Background="White" BorderBrush="Black" SelectionOpacity="5" ToolTip="Enter your password."/>
-        <TextBox x:Name="usernameBox" HorizontalAlignment="Left" Height="23" Margin="108,123,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2" Background="White" BorderBrush="Black" SelectionOpacity="5" ToolTip="Enter your password."/>
+        <Button x:Name="loginButton" Grid.ColumnSpan="2" Content="Login" HorizontalAlignment="Left" Margin="108,225,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="loginButton_Click" TabIndex="3"/>
+        <TextBox x:Name="passwordBox" HorizontalAlignment="Left" Height="23" Margin="108,165,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2" Background="White" BorderBrush="Black" SelectionOpacity="5" ToolTip="Enter your password." TabIndex="2"/>
+        <TextBox x:Name="usernameBox" HorizontalAlignment="Left" Height="23" Margin="108,123,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2" Background="White" BorderBrush="Black" SelectionOpacity="5" ToolTip="Enter your password." TabIndex="1"/>
         <TextBlock x:Name="loginBlock" HorizontalAlignment="Left" Margin="24,64,0,0" TextWrapping="Wrap" Text="Please login to begin." VerticalAlignment="Top" Grid.ColumnSpan="2" Width="231" Foreground="#FF0B969C" FontWeight="Bold" FontSize="20"/>
         <TextBlock x:Name="usernameBlock" HorizontalAlignment="Left" Margin="49,123,0,0" TextWrapping="Wrap" Text="username:" VerticalAlignment="Top"/>
         <TextBlock x:Name="passwordBlock" HorizontalAlignment="Left" Margin="51,165,0,0" TextWrapping="Wrap" Text="password:" VerticalAlignment="Top"/>
