--- a/LifeCycle/LifeCycle/MainWindow.xaml
+++ b/LifeCycle/LifeCycle/MainWindow.xaml
@@ -3,31 +3,32 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:k="http://schemas.microsoft.com/kinect/2013"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="LifeCycle.MainWindow"
-        Title="MainWindow" Height="900" Width="1200" Background="#FFF7F1F1">
+        Title="MainWindow" Height="1200" Width="1600" Background="#FFF7F1F1">
 
 
-    <Grid>
+    <Grid Margin="0,10,2,-30">
         <k:KinectSensorChooserUI HorizontalAlignment="Center" VerticalAlignment="Top" x:Name="sensorChooserUi" />
-        <k:KinectRegion x:Name="kinectRegion" Margin="-10,0,10,0" Background="#FF746E6E">
+        <k:KinectRegion x:Name="kinectRegion" Margin="-49,195,49,0" Background="#FF746E6E">
 
-            <Grid>
-                <Grid HorizontalAlignment="Left" Height="870" VerticalAlignment="Top" Width="376.403" Margin="10,0,0,0">
-                    <Grid.Background>
-                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                            <GradientStop Color="Black" Offset="0"/>
-                            <GradientStop Color="Black" Offset="1"/>
-                            <GradientStop Color="#FF8D8B8B" Offset="0.5"/>
-                        </LinearGradientBrush>
-                    </Grid.Background>
-                    <Border BorderThickness="4" BorderBrush="Chocolate" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,10,0,0" Height="250" Width="330">
-                        <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeed"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill"/>
+            <Grid Margin="-10,10,10,-10">
+                <Grid HorizontalAlignment="Left" Height="1173" VerticalAlignment="Top" Width="657.403" Margin="61,-213,0,0" Background="Black">
+                	<Grid.RowDefinitions>
+                		<RowDefinition Height="950*"/>
+                		<RowDefinition Height="223*"/>
+                	</Grid.RowDefinitions>
+                    <Border BorderThickness="4" BorderBrush="Chocolate" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,10,0,0" Height="480" Width="640">
+                        <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeed"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Width="640" Height="480" Margin="-14,6,6,-14"/>
                     </Border>
-                    <Border BorderThickness="4" BorderBrush="Chocolate" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="20,0,0,13.248" Height="250" Width="330">
-                        <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectClinitianFeed"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill"/>
+                    <Border BorderThickness="4" BorderBrush="Chocolate" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="10,0,0,-3" Height="480" Width="640" Grid.RowSpan="2">
+                        <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectClinitianFeed"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Width="640" Height="480" Margin="-4,6,-4,-14"/>
                     </Border>
-                    <k:KinectTileButton Content="Options" LabelBackground="#91908A" HorizontalAlignment="Left" Margin="34,393,0,0" VerticalAlignment="Top" Width="291" x:Name="showOptionsButton" Click="showOptionsButton_Click" Height="111" Background="#FF3E3930" Foreground="#FFDE6D0F"/>
+                    <k:KinectTileButton Content="Options" LabelBackground="#91908A" HorizontalAlignment="Left" Margin="182,535,0,0" VerticalAlignment="Top" Width="327" x:Name="showOptionsButton" Click="showOptionsButton_Click" Height="129" Background="#FF3E3930" Foreground="#FFDE6D0F" FontSize="48"/>
                 </Grid>
-                <Grid HorizontalAlignment="Left" Height="870" VerticalAlignment="Top" Width="833.204" Margin="375.36,0,-16.564,0">
+                <Grid HorizontalAlignment="Left" Height="1173" VerticalAlignment="Top" Width="951.597" Margin="718.403,-213,-80,0">
+                	<Grid.RowDefinitions>
+                		<RowDefinition Height="109*"/>
+                		<RowDefinition Height="65*"/>
+                	</Grid.RowDefinitions>
                     <Grid.Background>
                         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                             <GradientStop Color="#FFDE6D0F"/>
@@ -36,16 +37,16 @@
                             <GradientStop Color="#FF1F1F1D" Offset="0.746"/>
                         </LinearGradientBrush>
                     </Grid.Background>
-                    <k:KinectTileButton Content="Begin Workout" LabelBackground="#91908A" HorizontalAlignment="Left" Margin="22.086,719.831,0,0" VerticalAlignment="Top" Width="382.972" x:Name="beginWorkoutButton" Click="beginWorkoutButton_Click" Height="110.354" Background="#FF3E3930" Foreground="#FFDE6D0F" />
-                    <k:KinectTileButton Content="Exit" HorizontalAlignment="Left" LabelBackground="Brown" Margin="423.668,719.831,0,0" VerticalAlignment="Top" Width="382.972" x:Name="exitProgramButton" Click="exitProgramButton_Click" Height="110.354" Background="#FF3E3930" Foreground="#FFDE6D0F" />
+                    <k:KinectTileButton Content="Begin Workout" LabelBackground="#91908A" HorizontalAlignment="Left" Margin="43.086,189.573,0,0" VerticalAlignment="Top" Width="396.582" x:Name="beginWorkoutButton" Click="beginWorkoutButton_Click" Height="158.354" Background="#FF3E3930" Foreground="#FFDE6D0F" Grid.Row="1" FontSize="48" />
+                    <k:KinectTileButton Content="Exit" HorizontalAlignment="Left" LabelBackground="Brown" Margin="471.668,189.367,0,0" VerticalAlignment="Top" Width="427.972" x:Name="exitProgramButton" Click="exitProgramButton_Click" Height="158.354" Background="#FF3E3930" Foreground="#FFDE6D0F" Grid.Row="1" FontSize="48" />
                     <Label Content="LifeCycle" HorizontalAlignment="Left" Margin="287.661,-2.861,0,0" VerticalAlignment="Top" FontSize="64" FontWeight="Bold" Foreground="#FF3E3930"/>
-                    <Label x:Name="startWorkoutCountdownLabel" Content=""  Margin="233,366,181.204,409" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="64" FontWeight="Black" Foreground="#FFDE6D0F" Width="419" d:IsHidden="True"/>
-                    <k:KinectTileButton Content="Done" LabelBackground="#91908A" HorizontalAlignment="Left" Margin="287.661,719.831,0,0" VerticalAlignment="Top" Width="290.211" x:Name="closeOptionsButton" Click="closeOptionsButton_Click" Height="110.354" Background="#FF3E3930" Foreground="#FFDE6D0F" Visibility="Hidden"/>
+                    <Label x:Name="startWorkoutCountdownLabel" Content=""  Margin="233,366,181.204,84" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="64" FontWeight="Black" Foreground="#FFDE6D0F" Width="419" d:IsHidden="True"/>
+                    <k:KinectTileButton Content="Done" LabelBackground="#91908A" HorizontalAlignment="Left" Margin="287.661,174.831,0,0" VerticalAlignment="Top" Width="290.211" x:Name="closeOptionsButton" Click="closeOptionsButton_Click" Height="110.354" Background="#FF3E3930" Foreground="#FFDE6D0F" Visibility="Hidden" Grid.Row="1"/>
                     <k:KinectScrollViewer x:Name="selectTimeScrollViewer" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Hidden" HorizontalAlignment="Left" Margin="213.159,202.963,0,0" VerticalAlignment="Top" Height="165" Width="540" Visibility="Hidden" Foreground="#FFDE6D0F">
                         <StackPanel Orientation="Horizontal" Name="workoutTimeScrollContent" />
                     </k:KinectScrollViewer>
                     <Label x:Name="optionsTimeLabel" Content="Time" HorizontalAlignment="Left" Margin="94.407,226.889,0,0" VerticalAlignment="Top" Height="46.878" Width="96.542" FontSize="32" Foreground="#FFDE6D0F" Visibility="Hidden"/>
-                    <Label x:Name="timerLabel" Content="timerLabel" HorizontalAlignment="Left" Margin="328,657,0,0" VerticalAlignment="Top" FontSize="36" FontWeight="Bold"/>
+                    <Label x:Name="timerLabel" Content="timerLabel" HorizontalAlignment="Left" Margin="328,112,0,0" VerticalAlignment="Top" FontSize="36" FontWeight="Bold" Grid.Row="1"/>
 
                 </Grid>
 
