Got the login working using the django auth. It just redirects to the screen with everything instead of clicking by the login

--- a/Django/mysite/templates/patientstats.html
+++ b/Django/mysite/templates/patientstats.html
@@ -1,11 +1,14 @@
 {% load render_table from django_tables2 %}
 <!doctype html>
+{% load static %}
 <html>
     <head>
         <link rel="stylesheet" href="{{ STATIC_URL }}django_tables2/themes/paleblue/css/screen.css" />
 		<body background="http://test.scripts.psu.edu/users/m/p/mpc5185/BlueFadeBackground2.png" style ="background-repeat: repeat-x">
     </head>
     <body>
-        {% render_table patientstats %}
+    	{% csrf_token %}
+        {% render_table patientStats %}
+    	
     </body>
 </html>
