--- a/Django/mysite/templates/login.html
+++ b/Django/mysite/templates/login.html
@@ -44,13 +44,16 @@
           </div>
 
           <div class="submit-row">
-            <center><label>&nbsp;</label><input type="submit" value="Login in" /></center>
+            <center><input type="submit" value="Login" /></center>
           </div>
 
 
         </form>
       </div>
+        <br class="clear" />
     </div>
+      <div id="footer"></div>
+  </div>
 
 
 
