--- a/CliniCycle/CliniCycle/MainWindow.xaml
+++ b/CliniCycle/CliniCycle/MainWindow.xaml
@@ -2,34 +2,51 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:k="http://schemas.microsoft.com/kinect/2013"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
 	x:Class="CliniCycle.MainWindow"
 	x:Name="Window"
 	Title="MainWindow"
-	Width="1600" Height="1200">
+	Width="1024" Height="768">
 
-    <Grid x:Name="LayoutRoot" OpacityMask="Black" RenderTransformOrigin="0.5,0.5" Background="White" Margin="10,-10,-18,-20" Width="1600" Height="1200" >
-        <Border x:Name="borderPatient1" BorderThickness="4" BorderBrush="Chocolate" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,10,0,0" Height="400" Width="400">
-            <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeed"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="-4,-14,-4,6" Width="400" Height="400" MouseEnter="patient1_Click" />
+    <Grid x:Name="LayoutRoot" OpacityMask="Black" RenderTransformOrigin="0.478,0.52" Background="White" Margin="0,0,2,1" >
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="0*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="19*"/>
+            <RowDefinition Height="141*"/>
+        </Grid.RowDefinitions>
+        <Border x:Name="borderPatient1" BorderThickness="4" BorderBrush="#FF01A2E8" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="15,31,0,0" Height="120" Width="160" Grid.Row="1">
+            <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeed"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="-4" Width="160" Height="120" MouseEnter="patient1_Click" />
         </Border>
-        <Border x:Name="borderPatientLarge" BorderThickness="4" BorderBrush="Chocolate" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="774,522,0,0" Height="678" Width="826">
-            <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeedLarge"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="6"/>
+        <Border x:Name="borderPatientLarge" BorderThickness="4" BorderBrush="#FF01A2E8" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="365,161,0,0" Height="480" Width="640" Grid.Row="1">
+            <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeedLarge"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="-5,-2,-3,-6" Width="640" Height="480"/>
         </Border>
-        <Border x:Name="borderPatient2" BorderThickness="4" BorderBrush="Chocolate" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="400,10,0,0" Height="400" Width="400">
-            <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeed2"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="-14,-4,6,-4" Width="400" Height="400"/>
+        <Border x:Name="borderPatient2" BorderThickness="4" BorderBrush="#FF01A2E8" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="180,31,0,0" Height="120" Width="160" Grid.Row="1">
+            <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeed2"   HorizontalAlignment="Stretch" VerticalAlignment="Top" Stretch="Fill" Margin="-4" Width="160" Height="120"/>
         </Border>
-        <Border x:Name="borderPatient3" BorderThickness="4" BorderBrush="Chocolate" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="800,10,0,0" Height="400" Width="400">
-            <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeed3"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="-4" Width="400" Height="400"/>
+        <Border x:Name="borderPatient3" BorderThickness="4" BorderBrush="#FF01A2E8" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="345,31,0,0" Height="120" Width="160" Grid.Row="1">
+            <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeed3"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="-4" Width="160" Height="120"/>
         </Border>
-        <Border x:Name="borderPatient4" BorderThickness="4" BorderBrush="Chocolate" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="1190,10,0,0" Height="400" Width="400">
-            <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeed4"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="-4" Width="400" Height="400"/>
+        <Border x:Name="borderPatient4" BorderThickness="4" BorderBrush="#FF01A2E8" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,31,344,0" Height="120" Width="160" Grid.Row="1">
+            <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeed4"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="0,0,-8,-8" Width="160" Height="120"/>
         </Border>
-        <TextBlock x:Name="patientIDBlock" HorizontalAlignment="Left" Margin="15,522,0,0" TextWrapping="Wrap" Text="patient1" VerticalAlignment="Top" Height="123.96" Width="759" FontWeight="Bold" FontSize="64" TextAlignment="Center" Background="White" Foreground="#FF2874BF"/>
-        <TextBlock x:Name="patientHeartrateBlock" HorizontalAlignment="Left" Margin="15,645.96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="123.96" Width="759" FontWeight="Bold" FontSize="48" TextAlignment="Center" Background="White" Foreground="#FF2874BF"><Run Language="en-ca" Text="Heart rate: 125 bpm"/></TextBlock>
-        <TextBlock x:Name="patientOxygenSatBlock" HorizontalAlignment="Left" Margin="15,774.92,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="123.96" Width="759" FontWeight="Bold" FontSize="48" TextAlignment="Center" Background="White" Foreground="#FF2874BF"><Run Language="en-ca" Text="Oxygen Saturation: 99%"/></TextBlock>
-        <Button x:Name="buttonPatient1" Content="Button" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Width="400" Height="400" Opacity="0" Click="patient1_Click"/>
-        <Button x:Name="buttonPatient2" Content="Button" HorizontalAlignment="Left" Margin="400,10,0,0" VerticalAlignment="Top" Width="400" Height="400" Opacity="0" Click="patient2_Click"/>
-        <Button x:Name="buttonPatient3" Content="Button" HorizontalAlignment="Left" Margin="800,10,0,0" VerticalAlignment="Top" Width="400" Height="400" Opacity="0" Click="patient3_Click"/>
-        <Button x:Name="buttonPatient4" Content="Button" HorizontalAlignment="Left" Margin="1190,10,0,0" VerticalAlignment="Top" Width="400" Height="400" Opacity="0" Click="patient4_Click"/>
-        <Image HorizontalAlignment="Left" Height="100" Margin="-28,1158,0,-58" VerticalAlignment="Top" Width="100"/>
+        <TextBlock x:Name="patientIDBlock" HorizontalAlignment="Left" Margin="4,318,0,0" TextWrapping="Wrap" Text="patient1" VerticalAlignment="Top" Height="124" Width="356" FontWeight="Bold" FontSize="64" Background="White" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Grid.Row="1"/>
+        <TextBlock x:Name="patientHeartrateBlock" HorizontalAlignment="Left" Margin="4,379,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="124" Width="356" FontWeight="Bold" FontSize="48" Background="White" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Grid.Row="1"><Run Language="en-ca" Text="Heart rate: 125 bpm"/></TextBlock>
+        <TextBlock x:Name="patientOxygenSatBlock" HorizontalAlignment="Left" Margin="4,427,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="124" Width="356" FontWeight="Bold" FontSize="48" Background="White" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Grid.Row="1"><Run Language="en-ca" Text="Oxygen Saturation: 99%"/></TextBlock>
+        <Button x:Name="buttonPatient1" Content="Button" HorizontalAlignment="Left" Margin="15,26,0,0" VerticalAlignment="Top" Width="160" Height="120" Click="patient1_Click" Background="#FF0A0202" Opacity="0" Grid.Row="1"/>
+        <Button x:Name="buttonPatient2" Content="Button" HorizontalAlignment="Left" Margin="180,31,0,0" VerticalAlignment="Top" Width="160" Height="120" Click="patient2_Click" Background="Black" Opacity="0" Grid.Row="1"/>
+        <Button x:Name="buttonPatient3" Content="Button" HorizontalAlignment="Left" Margin="345,31,0,0" VerticalAlignment="Top" Width="160" Height="120" Click="patient3_Click" Background="Black" Opacity="0" Grid.Row="1"/>
+        <Button x:Name="buttonPatient4" Content="Button" HorizontalAlignment="Right" Margin="0,31,344,0" VerticalAlignment="Top" Width="160" Height="120" Click="patient4_Click" Background="Black" Opacity="0" Grid.Row="1"/>
+        <Label Content="LifeCycle" HorizontalAlignment="Center" Margin="0,-3,-16,0" VerticalAlignment="Top" Width="1030" Height="116" Background="#FF01A2E8" Foreground="White" FontFamily="Microsoft Uighur" FontSize="72" RenderTransformOrigin="0.49,-0.246" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
+        <Border x:Name="borderPatient5" BorderThickness="4" BorderBrush="#FF01A2E8" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,31,179,0" Height="120" Width="160" Grid.Row="1">
+            <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeed5"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="-4" Width="160" Height="120"/>
+        </Border>
+        <Button x:Name="buttonPatient5" Content="Button" HorizontalAlignment="Right" Margin="0,31,179,0" VerticalAlignment="Top" Width="160" Height="120" Click="patient4_Click" Background="Black" Opacity="0" Grid.Row="1"/>
+        <Border x:Name="borderPatient6" BorderThickness="4" BorderBrush="#FF01A2E8" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,31,14,0" Height="120" Width="160" Grid.Row="1">
+            <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeed6"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="-4" Width="160" Height="120"/>
+        </Border>
+        <Button x:Name="buttonPatient6" Content="Button" HorizontalAlignment="Right" Margin="0,31,14,0" VerticalAlignment="Top" Width="160" Height="120" Click="patient4_Click" Background="Black" Opacity="0" Grid.Row="1"/>
     </Grid>
 </Window>
