Added a little logo

--- a/CliniCycle/CliniCycle/MainWindow.xaml
+++ b/CliniCycle/CliniCycle/MainWindow.xaml
@@ -70,6 +70,7 @@
 
             </Grid>
         </k:KinectRegion>
+        <Image Margin="200,-14,736,639" Source="heart_beat.png" Stretch="Fill"/>
     </Grid>
 
 </Window>
