--- a/LifeCycle/LifeCycle/LoginWindow.xaml
+++ b/LifeCycle/LifeCycle/LoginWindow.xaml
@@ -14,6 +14,7 @@
         <TextBlock x:Name="usernameBlock" HorizontalAlignment="Left" Margin="49,123,0,0" TextWrapping="Wrap" Text="username:" VerticalAlignment="Top" Foreground="#FF01A2E8"/>
         <TextBlock x:Name="passwordBlock" HorizontalAlignment="Left" Margin="51,165,0,0" TextWrapping="Wrap" Text="password:" VerticalAlignment="Top" Foreground="#FF01A2E8"/>
         <Label x:Name="lifeCycleLabel" Content="LifeCycle" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" FontSize="48" Grid.ColumnSpan="2" Width="292" Height="58" Background="#FF01A2E8"/>
+        <Image Margin="0,1,102,213" Source="heart_beat.png" Stretch="Fill" Grid.Column="1"/>
 
     </Grid>
 </Window>
